# zexe-ethereum

./: .gitignore  Cargo.toml  README.md
bellman_ce/: Cargo.toml
bellman_ce/src/: lib.rs
bellman_ce/src/groth16/: mod.rs
client/: package-lock.json  package.json
client/src/: AccountComponent.js  App.js  EnsRegistrarComponent.js
client/src/contracts/: Ledger.json  MerkleTree.json  MiMC.json  Migrations.json  Pairing.json  Verifier.json
client/src/css/: App.css  grids-responsive-min.css
docs/: zexe_sequence.puml
dpc/: Cargo.toml
dpc/src/: lib.rs
dpc/src/crypto_primitives/nizk/: mod.rs
dpc/src/dpc/: mod.rs
dpc/src/dpc/plain_dpc/: address.rs  core_checks_circuit.rs  instantiated.rs  mod.rs  parameters.rs  predicate_circuit.rs  proof_check_circuit.rs  transaction.rs
dpc/src/gadgets/dpc/: mod.rs
ens/: package-lock.json  package.json  truffle.js
ens/migrations/: 2_deploy_contracts.js
pairing_ce/src/: lib.rs
pairing_ce/src/bls12_381/: ec.rs  fq2.rs
pairing_ce/src/bn256/: ec.rs  fq.rs  fq2.rs  mod.rs
sandbox/: generatePublicKey.js
solidity/: package-lock.json  package.json  truffle-config.js
solidity/contracts/: Ledger.sol
solidity/contracts/utils/: MerkleTree.sol  Pairing.sol  Verifier.sol
solidity/migrations/: 2_ledger.js
src/: g16_bn256.rs  groth16.rs  instantiated.rs  main.rs
zk-plasma/: README.md  requirements.txt  zk-plasma.py
zk-plasma/ethsnarks/: eddsa.py  field.py  jubjub.py  merkletree.py  mimc.py  pedersen.py  shamirspoly.py  verifier.py
zk-plasma/plasma/child/: child_chain.py
zk-plasma/plasma/root/: Ledger.abi  Ledger.sol  root_chain.py
zk-plasma/plasma/server/: server.py
zk-plasma/plasma_core/: block.py  chain.py  transaction.py
zk-plasma/tests/: mighty-test.py
