[package]
name = "zexe-ethereum"
version = "0.1.0"
authors = ["Osuke Sudo <dish230@gmail.com>"]
edition = "2018"

[dependencies]
clap = "~2.32"
dpc = { git = "https://github.com/osuketh/zexe" }
algebra = { git = "https://github.com/osuketh/zexe" }
snark = { git = "https://github.com/osuketh/zexe"}
snark-gadgets = { git = "https://github.com/osuketh/zexe"}
pairing_ce = { git = "https://github.com/matter-labs/pairing" }
bellman_ce = { git = "https://github.com/matter-labs/bellman" }
# sapling-crypto_ce = { git = "https://github.com/matter-labs/sapling-crypto" }
ff_ce = { git = "https://github.com/matter-labs/ff" }
rand = "0.4"
failure = { version = "0.1.1" }
failure_derive = { version = "0.1.1" }
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate", rev = '9112a28af677b75cd6f935dda34d283bb4f676e7' }

[[bin]]
name = 'zero-chain'
path = 'src/main.rs'
